# dan

./: .gitignore  ARCHITECTURE.md  LICENSE  dan_skills.json  install.sh  pyproject.toml  uninstall.sh
apps/cli/: main.py
apps/gui/: chat.py  config.py  main.py  panels.py  theme.py  window.py
apps/gui/animations/: breathing.py
apps/gui/backend/: client.py  worker.py
apps/gui/chat/: area.py  input.py  widgets.py
apps/gui/dialogs/: settings.py
apps/gui/panels/: inspector.py  status.py
apps/gui/sidebar/: panel.py
apps/gui/theme/: __init__.py  palette.py  typography.py
apps/voice/: main.py
assets/: dan.desktop  dan.desktop.in
dan/core/: bus.py  config.py  dispatcher.py  router.py  safety.py  tool_match.py  tool_registry.py
dan/gui/: __init__.py
dan/learn/: __init__.py  pipeline.py
dan/memory/: __init__.py  chats.py  memory.py  session.py
dan/plugins/: __init__.py  base.py  decorators.py  registry.py
dan/plugins/gdrive/: __init__.py  plugin.py
dan/providers/: base.py  ipex.py  ollama.py  registry.py
dan/services/: base.py  browser.py  shell.py
dan/skills/: __init__.py  registry.py  skill.py
dan/tools/: apps.py  archive.py  assistant.py  base.py  browser.py  command.py  datetime.py  decorators.py  docker.py  echo.py  files.py  filesystem.py  gdrive.py  git.py  hour.py  logs.py  misc.py  monitoring.py  network.py  network_services.py  packages.py  process.py  security.py  services.py  system.py  text.py
dan/voice/: __init__.py
docs/: ARCHITECTURE_PROPOSAL.md
models/: Modelfile.interp  Modelfile.persona  Modelfile.reason  build.sh
scripts/: ollama-sycl.sh
tests/: test_bus.py  test_chats.py  test_config.py  test_dispatcher.py  test_dispatcher_new.py  test_learning.py  test_memory.py  test_plugins.py  test_registry.py  test_router.py  test_skill.py  test_skill_registry.py  test_tool.py  test_tool_base.py
