[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dan"
version = "0.1.0"
description = "D.A.N. - Distributed Assistant Neural-network: Agentic Execution Framework for Linux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Harjot Singh Kaur" },
]
keywords = ["ai", "assistant", "agent", "linux", "desktop", "kde"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = [
    "ollama>=0.4",
]
voice = [
    "faster-whisper>=1.0",
    "piper-tts>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
]
all = [
    "dan[llm,voice,dev]",
]

[project.scripts]
dan = "apps.cli.main:main"

[project.urls]
Homepage = "https://github.com/harjot-singh/dan"
Repository = "https://github.com/harjot-singh/dan"

[tool.hatch.build.targets.wheel]
packages = ["dan", "apps"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["dan", "apps"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
